--- a/filme/pubspec.yaml
+++ b/filme/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^3.0.0
   intl: ^0.19.0
   cloud_firestore: ^5.0.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.0.0
 
 dev_dependencies:
   flutter_test:
